{sl}); ok = False
    tag = 'PASS' if ok else 'FAIL'
    print(f[{tag}]
  File "<string>", line 5
    script = '''#!/usr/bin/env python3
             ^
SyntaxError: unterminated triple-quoted string literal (detected at line 29)
